<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/label_select_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/label_select_child"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/grey2"
        android:textStyle="bold" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/genie_children_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_partner_child_list"
        android:layout_below="@id/label_select_child"
        android:paddingBottom="48dp"
        android:layout_margin="@dimen/dp_4" />

    <Button
        android:id="@+id/btn_browse_lesson"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_partner_button_selector"
        android:enabled="false"
        android:text="@string/btn_browse_lessons"
        android:textColor="@color/white"
        android:textAllCaps="false" />


    <TextView
        android:id="@+id/empty_message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/no_genie_children_available"/>

</RelativeLayout>